handleDataURL is only used by curl https://bugs.webkit.org/show_bug.cgi?id=158636

Reviewed by Tim Horton.

* CMakeLists.txt:
* platform/network/DataURL.cpp: Removed.
* platform/network/DataURL.h: Removed.
* platform/network/curl/ResourceHandleManager.cpp:
(WebCore::ResourceHandleManager::startScheduledJobs):
(WebCore::handleDataURL):
(WebCore::ResourceHandleManager::dispatchSynchronousJob):



Canonical link: https://commits.webkit.org/176728@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@201946 268f45cc-cd09-0410-ab3c-d52691b4dbfc